# takecrate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: CONTRIBUTING.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
examples/: takecrate_example_installer.rs
locales/: README.md  core.ftl
locales/en-US/: main.ftl
locales/es/: main.ftl
locales/fr/: main.ftl
locales/ru/: main.ftl
locales/zh-CN/: main.ftl
locales/zh-TW/: main.ftl
src/: error.rs  i18n.rs  inst.rs  lib.rs  lib_doc.rs  locale.rs  manifest.rs  os.rs  path.rs  tui.rs  uninst.rs
src/inst/: config.rs  exec.rs  package.rs  plan.rs
src/manifest/: discovery.rs  disk.rs  id.rs
src/os/: unix.rs  windows.rs
src/tui/: bg.rs  dialog.rs
tests/: directory_install.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
