[workspace]
members = ["xtask"]

[package]
name = "takecrate"
version = "0.0.1"
edition = "2021"

[dependencies]
crc32c = "0.6.8"
cursive = "0.21.1"
fluent-bundle = "0.15.3"
fluent-templates = "0.11.0"
ron = "0.8.1"
self-replace = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
sys-locale = "0.3.1"
tempfile = "3.13.0"
thiserror = "1.0.64"
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["serde", "v5"] }

[target.'cfg(windows)'.dependencies]
windows-registry = "0.3.0"
windows-result = "0.2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.159"

[dev-dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
regex-lite = "0.1.6"
tracing-subscriber = "0.3.18"
whoami = "1.5.2"

[lints.rust]
missing-docs = "warn"